--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,25 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+  --background: white;
+  --foreground: black;
+}
+
+[data-theme='dark'] {
+  --background: black;
+  --foreground: white;
+}
+
+body {
+  background-color: var(--background);
+  color: var(--foreground);
+}
+
+.text-gradient {
+    background: linear-gradient(to right, #34d399, #f95771);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+  }
